@@ -16,15 +16,7 @@ libEmberPagingSceneManager_la_SOURCES = \
 						OgrePagingLandScapeOctreeSphereSceneQuery.cpp \
 						OgrePagingLandScapeCamera.cpp \
 						OgrePagingLandScapeData2D.cpp \
-						OgrePagingLandScapeData2D_HeightField.cpp \
-						OgrePagingLandScapeData2D_HeightFieldN.cpp \
-						OgrePagingLandScapeData2D_HeightFieldNTC.cpp \
-						OgrePagingLandScapeData2D_HeightFieldRaw.cpp \
-						OgrePagingLandScapeData2D_HeightFieldRawTC.cpp \
-						OgrePagingLandScapeData2D_HeightFieldTC.cpp \
-						OgrePagingLandScapeData2D_HeightFieldBlendNeighbor.cpp \
 						OgrePagingLandScapeData2DManager.cpp \
-						OgrePagingLandScapeData2D_Spline.cpp \
 						OgrePagingLandScapeHorizon.cpp \
 						OgrePagingLandScapeIndexBuffer.cpp \
 						OgrePagingLandScapeListenerManager.cpp \
@@ -41,22 +33,7 @@ libEmberPagingSceneManager_la_SOURCES = \
 						OgrePagingLandScapeTexture_BaseTexture2.cpp \
 						OgrePagingLandScapeTexture_BaseTexture.cpp \
 						OgrePagingLandScapeTexture.cpp \
-						OgrePagingLandScapeTexture_Image.cpp \
-						OgrePagingLandScapeTexture_InstantBaseTexture.cpp \
-						OgrePagingLandScapeTexture_InstantBaseTextureShadowed.cpp \
-						OgrePagingLandScapeTexture_InstantBaseTextureEdit.cpp \
 						OgrePagingLandScapeTextureManager.cpp \
-						OgrePagingLandScapeTexture_Splatting2.cpp \
-						OgrePagingLandScapeTexture_Splatting2Edit.cpp \
-						OgrePagingLandScapeTexture_Splatting3.cpp \
-						OgrePagingLandScapeTexture_Splatting4.cpp \
-						OgrePagingLandScapeTexture_Splatting5.cpp \
-						OgrePagingLandScapeTexture_Splatting6.cpp \
-						OgrePagingLandScapeTexture_Splatting7.cpp \
-						OgrePagingLandScapeTexture_Splatting7Edit.cpp \
-						OgrePagingLandScapeTexture_SplattingShader.cpp \
-						OgrePagingLandScapeTexture_SplattingShaderEdit.cpp \
-						OgrePagingLandScapeTexture_Splatting.cpp \
 						OgrePagingLandScapeTile.cpp \
 						OgrePagingLandScapeTileManager.cpp \
 						OgrePagingLandScapeOcclusion.cpp \
@@ -78,3 +55,28 @@ libEmberPagingSceneManager_la_SOURCES = \
 						EmberPagingLandScapeTexture.cpp \
 						EmberPagingSceneManagerAdapter.cpp
 libEmberPagingSceneManager_la_LDFLAGS = -no-undefined
+
+#						OgrePagingLandScapeData2D_HeightField.cpp \
+# 						OgrePagingLandScapeData2D_HeightFieldN.cpp \
+# 						OgrePagingLandScapeData2D_HeightFieldNTC.cpp \
+# 						OgrePagingLandScapeData2D_HeightFieldRaw.cpp \
+# 						OgrePagingLandScapeData2D_HeightFieldRawTC.cpp \
+# 						OgrePagingLandScapeData2D_HeightFieldTC.cpp \
+# 						OgrePagingLandScapeData2D_HeightFieldBlendNeighbor.cpp \
+# 						OgrePagingLandScapeData2D_Spline.cpp \
+# 						OgrePagingLandScapeTexture_Image.cpp \
+# 						OgrePagingLandScapeTexture_InstantBaseTexture.cpp \
+# 						OgrePagingLandScapeTexture_InstantBaseTextureShadowed.cpp \
+# 						OgrePagingLandScapeTexture_InstantBaseTextureEdit.cpp \
+# 						OgrePagingLandScapeTexture_Splatting2.cpp \
+# 						OgrePagingLandScapeTexture_Splatting2Edit.cpp \
+# 						OgrePagingLandScapeTexture_Splatting3.cpp \
+# 						OgrePagingLandScapeTexture_Splatting4.cpp \
+# 						OgrePagingLandScapeTexture_Splatting5.cpp \
+# 						OgrePagingLandScapeTexture_Splatting6.cpp \
+# 						OgrePagingLandScapeTexture_Splatting7.cpp \
+# 						OgrePagingLandScapeTexture_Splatting7Edit.cpp \
+# 						OgrePagingLandScapeTexture_SplattingShader.cpp \
+# 						OgrePagingLandScapeTexture_SplattingShaderEdit.cpp \
+# 						OgrePagingLandScapeTexture_Splatting.cpp 
+
