@@ -178,12 +178,12 @@ NumRenderablesLoading=50
 #  WINDOWING AROUND CAMERA
 #
 #           Num of adjacent loaded landscape pages.
-MaxAdjacentPages=1
+MaxAdjacentPages=3
 #
 
 #           Num of adjacent preloaded landscape pages.
 #               Must be bigger than MaxAdjacentPages + 1, the textures are loaded in a separate thread.
-MaxPreloadedPages=2
+MaxPreloadedPages=4
 #
 #
 
